--- a/public/index.css
+++ b/public/index.css
@@ -19,6 +19,17 @@
   position: absolute;
   top: 500px;
   left: 300px;
+  z-index: 2;
+}
+
+.oyster {
+  width: 70px;
+  height: 70px;
+  background-image:url("oyster.png");
+  position: absolute;
+  top: 400px;
+  left: 250px;
+  z-index: 1;
 }
 
 .end-message {
@@ -27,4 +38,42 @@
 
 .end-message.active {
   display: block;
+  position: absolute;
+  height: 50vh;
+  top: 25vh;
+  width: 50%;
+  left: 25%;
+  background: rgba(255, 255, 255, .5);
+  z-index: 3;
+  text-align: center;
+}
+
+.message-title {
+  font-weight: bold;
+  font-size: 32px;
+}
+
+.message-score {
+  font-size: 24px;
+}
+
+.vertical-center {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.message-button {
+  font-size: 24px;
+  background: forestgreen;
+  color: white;
+  border-top: solid 2px rgb(240, 240, 240);
+  border-left: solid 2px rgb(240, 240, 240);
+
+  border-right: solid 2px rgb(220, 220, 220);
+  border-bottom: solid 2px rgb(220, 220, 220);
+  padding: 15px;
+  margin-top: 10px;
+  cursor: pointer;
+  border-radius: 5px;
 }
