--- a/public/index.css
+++ b/public/index.css
@@ -8,24 +8,28 @@
   background: rgb(250, 250, 250);
   height: 100vh;
   position: relative;
-  cursor: progress;
+  /* 
+    Force the browser, when hovering over the container,
+    to display the "beach ball" progress cursor
+  */
+  cursor: progress; 
 }
 
 .hippo {
   width: 70px;
   height: 70px;
   background-image:url("hippo.png");
-  transition: all 500ms;
+  transition: all 500ms; /* animates the top and left property changes */
   position: absolute;
   top: 500px;
   left: 300px;
-  z-index: 2;
+  z-index: 2; /* put the hippos on top of the oyster */
 }
 
 .oyster {
   width: 70px;
   height: 70px;
-  background-image:url("oyster.png");
+  background-image:url("oyster.png"); /* buttered-toast.png */
   position: absolute;
   top: 400px;
   left: 250px;
@@ -58,6 +62,21 @@
 }
 
 .vertical-center {
+  /* 
+    Oh, how vertical centering ACTUALLY works...
+    
+    position: relative -- make the browser 
+      apply top/left/bottom/right to this element
+
+    top: 50% -- move the top pixel of this element
+      down to 50% of it's parent's height, so that
+      this element's top aligns with the parent's midpoint
+
+    transform: translateY(-50%) -- move the top pixel
+      of this element up by 50% of it's OWN height,
+      so that now this element's midpoint aligns
+      with the parent's midpoint
+  */
   position: relative;
   top: 50%;
   transform: translateY(-50%);
@@ -67,13 +86,15 @@
   font-size: 24px;
   background: forestgreen;
   color: white;
-  border-top: solid 2px rgb(240, 240, 240);
-  border-left: solid 2px rgb(240, 240, 240);
-
-  border-right: solid 2px rgb(220, 220, 220);
-  border-bottom: solid 2px rgb(220, 220, 220);
   padding: 15px;
   margin-top: 10px;
   cursor: pointer;
   border-radius: 5px;
+
+  /* Adding differently colored borders 
+    can make buttons look textured quickly */
+  border-top: solid 2px rgb(240, 240, 240);
+  border-left: solid 2px rgb(240, 240, 240);
+  border-right: solid 2px rgb(220, 220, 220);
+  border-bottom: solid 2px rgb(220, 220, 220);
 }
